# meuprojeto-poetry

./: pyproject.toml
tests/: test_meuprojeto.py
