[tool.poetry]
name = "meuprojeto"
version = "0.1.0"
description = ""
authors = ["phonorato <paulohonoratos@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
